--- a/twitter_etl/Dockerfile
+++ b/twitter_etl/Dockerfile
@@ -1,7 +1,7 @@
 FROM apache/airflow:2.4.3-python3.10
 USER root
-COPY python_scripts/*  /opt/airflow/python_scripts
-COPY dags/*   /opt/airflow/dags
+COPY python_scripts/*  /opt/airflow/python_scripts/
+COPY dags/*   /opt/airflow/dags/
 COPY requirements.txt /
 USER airflow 
 RUN pip install --no-cache-dir -r /requirements.txt
