--- a/twitter_etl/docker-compose.yaml
+++ b/twitter_etl/docker-compose.yaml
@@ -64,6 +64,7 @@ x-airflow-common:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
+    - ./keys:/opt/airflow/keys
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -71,6 +72,8 @@ x-airflow-common:
      # condition: service_healthy
     postgres:
       condition: service_healthy
+   # environment:
+     # GOOGLE_APPLICATION_CREDENTIALS: /home/lambobry1994/.config/gcloud/application_default_credentials.json
 
 services:
   postgres:
